--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Мой первый сайт</title>
+<div class="melting-text-container">
+    <h1 class="melting-text">Сайт ¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</h1>
+</div>
 </head>
-
-<body>
-	<div class="neon-container">
-		<h1 class="neon-text">Сайт ¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</h1>
-	</div>
-</body>
-
 </html>
