--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Мой первый сайт</title>
-<div class="melting-text-container">
-    <h1 class="melting-text">Сайт ¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</h1>
+<div class="container">
+  <h2 class="title">
+    <span class="title-word title-word-1">Сайт</span>
+    <span class="title-word title-word-2"> не</span>
+    <span class="title-word title-word-3">за 5 минут</span>
+    <span class="title-word title-word-4">¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</span>
+  </h2>
 </div>
 </head>
 </html>
